fix(nav-bar-mobile): when the navbar was scrolled, other elements overlapped it

--- a/src/components/navigation/NavBar/mobile/NavBarMobile.module.scss
+++ b/src/components/navigation/NavBar/mobile/NavBarMobile.module.scss
@@ -1,4 +1,5 @@
 .mobileNavBar {
+  z-index: 1;
   position: fixed;
   width: 100%;
   min-height: 5rem;
